# auto_docking_ros

./: .clang-format  .gitignore  README.md
.github/workflows/: bump_version.yaml
auto_docking/: CMakeLists.txt  README.md  package.xml
auto_docking/config/: auto_docking.yaml
auto_docking/include/auto_docking/: auto_docking_node.hpp  types.hpp
auto_docking/launch/: auto_docking.launch.py
auto_docking/src/: auto_docking_node.cpp  main.cpp
auto_docking/test/: CMakeLists.txt
